2008-02-26 Denis Ovsienko
	* zebra_rib.[ch]: (rib_lookup_and_pushup) New function, which makes sure,
	  that if_set_prefix() has nothing in its way of assigning an address.
	* ioctl.c: (if_set_prefix) Use rib_lookup_and_pushup() to resolve
	  bug #326.

2008-01-11 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* ioctl.c: If HAVE_BSD_LINK_DETECT is defined, include <net/if_media.h>
	  (if_get_flags) Remove debug messages about BSD link state.
	* kernel_socket.c: (bsd_linkdetect_translate) If link state
	  is unknown, we should set the IFF_RUNNING flag.

2008-01-10 Ingo Flaschberger <if@xip.at>

	* ioctl.c: (if_get_flags) If HAVE_BSD_LINK_DETECT, use the SIOCGIFMEDIA
	  ioctl to ascertain link state.
	* kernel_socket.c: (bsd_linkdetect_translate) New function to
	  map the ifm_data.ifi_link_state value into the IFF_RUNNING flag.
	  (ifm_read) Call bsd_linkdetect_translate to fix the IFF_RUNNING
	  flag before calling if_flags_update.

2008-01-08 Michael Larson <mike@vyatta.com>

	* zebra_rib.c: (nexthop_active_check) Replace if_is_up with
	  if_is_operative to solve problems with static interface
	  routes not behaving properly with link-detect.

2007-11-12 Denis Ovsienko

	* connected.c: (connected_up_ipv4, connected_down_ipv4,
	  connected_up_ipv6, connected_down_ipv6) Collect all changed
	  connected routes closest possible to the RIB work queue, so
	  that the rest can be revalidated correctly.

2007-10-24 Denis Ovsienko

	* kernel_socket.c: (rtm_read) we used to ignore own messages,
	  but the RIB debug commit broke it for IPv6 case (reported
	  by Milan Kocian). Fixed.

2007-10-04 Denis Ovsienko

	* zebra_rib.c: (rib_process) escape from the nexthop
	  iteration cycle earliest possible to save CPU time.

2007-10-03 Denis Ovsienko

	* zebra_rib.c: (rib_process, rib_link, rib_addnode,
	  rib_unlink, rib_delnode) log IPv6 prefixes same well
	  as IPv4 ones are logged.

2007-09-14 Denis Ovsienko

	* rt_socket.c: (kernel_rtm_ipv4) Use lookup() instead of